# misis42biv

./: .gitattributes  .gitignore  README.md  pyproject.toml
biv/dev/: dto.py  export_encoder.py  label_llm.py  prompting.py  train_encoder.py  train_llm.py
data/: autolabel_encoder.parquet
data/for-teams/: payments_training.tsv
export/: Dockerfile  predict.py
export/data/: input.tsv  output.tsv
export/model/: encoder.json  encoder.onnx
export/model/tokenizer/: sentencepiece.bpe.model  tokenizer.json  tokenizer_config.json
